--- a/WindowPainless/App.xaml
+++ b/WindowPainless/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WindowPainless"
-             StartupUri="Settings.xaml">
+             StartupUri="SettingsWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
